kustomize/components/ingress/traefik/templates/service.yaml
---
# Source: traefik/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: infra-ingress
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-infra-ingress
    helm.sh/chart: traefik-39.0.0
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-infra-ingress
  ports:
  - port: 80
    name: web
    targetPort: web
    protocol: TCP
    nodePort: 30080
  - port: 443
    name: websecure
    targetPort: websecure
    protocol: TCP
    nodePort: 30083
