kustomize/components/ingress/traefik/templates/gateway.yaml
---
# Source: traefik/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: infra-ingress
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-infra-ingress
    helm.sh/chart: traefik-39.0.0
    app.kubernetes.io/managed-by: Helm
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
